--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
   <div id="scene-container"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="main.js"></script>
+  <script src="OrbitControls.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
